<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abort_button">Abort</string>
    <string name="about">About</string>
    <string name="about_app_description">An open-source Switch emulator</string>
    <string name="about_description">Build version, credits, and more</string>
    <string name="add_game_folder">Add game folder 📁</string>
    <string name="add_games">Add Games 👍</string>
    <string name="add_games_description">Select your games folder 📁</string>
    <string name="add_games_warning">Skip selecting games folder??. (why )</string>
    <string name="add_games_warning_description">Games won\'t be displayed in the Games list if a folder isn\'t selected.</string>
    <string name="add_games_warning_help">https://Ziunx-emu.org/help/quickstart/#dumping-games</string>
    <string name="add_ons">Add-ons</string>
    <string name="add_ons_description">Toggle mods, updates and DLC</string>
    <string name="addon_installed_successfully">Addon installed successfully</string>
    <string name="addon_notice">Important addon notice</string>
    <string name="addon_notice_description">In order to install mods and cheats, you must select a folder that contains a cheats/, romfs/, or exefs/ directory. We can\'t verify if these will be compatible with your game so be careful!</string>
    <string name="addons_game">Addons: %1$s</string>
    <string name="advanced_settings">settings 👾</string>
    <string name="advanced_settings_game">settings: %1$s</string>
    <string name="album_applet">Album</string>
    <string name="album_applet_description">See images stored in the user screenshots folder with the system photo viewer</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anisotropic_filtering">Anisotropic filtering</string>
    <string name="anisotropic_filtering_description">Improves the quality of textures when viewed at oblique angles</string>
    <string name="anti_aliasing_fxaa">FXAA</string>
    <string name="anti_aliasing_none">None</string>
    <string name="anti_aliasing_smaa">SMAA</string>
    <string name="app_disclaimer">This software will run games for the Nintendo Switch game console. No game titles or keys are included.&lt;br /&gt;&lt;br /&gt;Before you begin, please locate your &lt;b&gt; prod.keys &lt;/b&gt; file on your device storage.&lt;br /&gt;&lt;br /&gt;&lt;a href=https://ziunx-emu.org/help/quickstart&gt;Learn more&lt;/a&gt;</string>
    <string name="app_name">Ziunx</string>
    <string name="app_name_suffixed">Ziunx</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applets">Applet launcher</string>
    <string name="applets_description">Launch system applets using installed firmware</string>
    <string name="applets_error_applet">Applet not available</string>
    <string name="applets_error_description">Please ensure your &lt;a href=https://zunix-emu.org/help/quickstart/#dumping-prodkeys-and-titlekeys&gt;prod.keys&lt;/a&gt; file and &lt;a href=https://Zinux-emu.org/help/quickstart/#dumping-system-firmware&gt;firmware&lt;/a&gt; are installed and try again.</string>
    <string name="applets_error_firmware">Firmware not installed</string>
    <string name="are_you_interested">Are you interested?</string>
    <string name="attempted_auto_map">Attempted auto-map with %1$s</string>
    <string name="audio_output_engine">Output engine</string>
    <string name="audio_volume">Volume</string>
    <string name="audio_volume_description">Specifies the volume of audio output.</string>
    <string name="auto">Auto</string>
    <string name="auto_map">Auto-map a controller</string>
    <string name="auto_map_description">Select a device to attempt auto-mapping</string>
    <string name="back">Back</string>
    <string name="bottom">Bottom</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="build">Build</string>
    <string name="building_shaders">Building shaders</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_capture">Capture</string>
    <string name="button_home">Home</string>
    <string name="button_l">L</string>
    <string name="button_map_description">Press a button or move a trigger/stick</string>
    <string name="button_minus">Minus</string>
    <string name="button_plus">Plus</string>
    <string name="button_r">R</string>
    <string name="button_sl_left">Left SL</string>
    <string name="button_sl_right">Right SL</string>
    <string name="button_sr_left">Left SR</string>
    <string name="button_sr_right">Right SR</string>
    <string name="button_x">X</string>
    <string name="button_y">Y</string>
    <string name="button_z">Z</string>
    <string name="button_zl">ZL</string>
    <string name="button_zr">ZR</string>
    <string name="buttons">Buttons</string>
    <string name="c_stick">C-Stick</string>
    <string name="cabinet_applet">Cabinet</string>
    <string name="cabinet_applet_description">Edit and delete data stored on amiibo</string>
    <string name="cabinet_formatter">Formatter</string>
    <string name="cabinet_game_data_eraser">Game data eraser</string>
    <string name="cabinet_launcher">Cabinet launcher</string>
    <string name="cabinet_nickname_and_owner">Nickname and owner settings</string>
    <string name="cabinet_restorer">Restorer</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancelling">Cancelling</string>
    <string name="center">Center</string>
    <string name="change_app_theme">Change app theme</string>
    <string name="change_theme_mode">Change theme mode</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear">Clear</string>
    <string name="clear_shader_cache">Clear shader cache</string>
    <string name="clear_shader_cache_description">Removes all shaders built while playing this game</string>
    <string name="clear_shader_cache_warning_description">You will experience more stuttering as the shader cache regenerates</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="cleared_shaders_successfully">Cleared shaders successfully</string>
    <string name="close">Close</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_uninstall">Confirm uninstall</string>
    <string name="confirm_uninstall_description">Are you sure you want to uninstall this addon?</string>
    <string name="connected">Connected</string>
    <string name="content_install_notice">Content install notice</string>
    <string name="content_install_notice_description">The content that you selected does not match this game.\nInstall anyway?</string>
    <string name="continue_button">Continue</string>
    <string name="contributors">Contributors</string>
    <string name="contributors_description">Emulator developers telegram \n@FreePalestine203 \n@豆豆\n@ahmedbarakat2007\n@cristopher Andres</string>
    <string name="contributors_link">https://github.com/Zinux-emu/Ziunx/graphs/contributors</string>
    <string name="control_stick">Control stick</string>
    <string name="controller_type">Controller type</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="copy">Copy</string>
    <string name="copy_details">Copy details</string>
    <string name="create_new_profile">Create new profile</string>
    <string name="cutting_edge_features">Cutting-edge features</string>
    <string name="delete">Delete</string>
    <string name="early_access">Early Access</string>
    <string name="early_access_benefits">Early Access Benefits</string>
    <string name="early_access_updates">Early access to updates</string>
    <string name="emulation_exit">Exit emulation</string>
    <string name="emulation_input_overlay">Overlay options</string>
    <string name="emulation_pause">Pause emulation</string>
    <string name="game_folders">Game folders</string>
    <string name="get_early_access">Early access </string>
    <string name="helping_game_preservation">Helping game preservation</string>
    <string name="invert_axis">Invert axis</string>
    <string name="invert_button">Invert button</string>
    <string name="load">Load</string>
    <string name="no_manual_installation">No manual installation</string>
    <string name="our_eternal_gratitude">Our eternal gratitude</string>
    <string name="per_game_settings">Per-game settings</string>
    <string name="preferences_controls">Controls</string>
    <string name="preferences_settings">Settings</string>
    <string name="prioritized_support">Prioritized support</string>
    <string name="save">Save</string>
    <string name="set_threshold">Set threshold</string>
    <string name="toggle_axis">Toggle axis</string>
    <string name="toggle_button">Toggle button</string>
    <string name="turbo_button">Turbo button</string>
    <string name="verify_integrity">Verify integrity</string>
</resources>