<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/ic_pause"
        android:id="@+id/menu_pause_emulation"
        android:title="@string/emulation_pause"/>
    <item
        android:icon="@drawable/ic_settings"
        android:id="@+id/menu_settings"
        android:title="@string/preferences_settings"/>
    <item
        android:icon="@drawable/ic_settings_outline"
        android:id="@+id/menu_settings_per_game"
        android:title="@string/per_game_settings"/>
    <item
        android:icon="@drawable/ic_controller"
        android:id="@+id/menu_controls"
        android:title="@string/preferences_controls"/>
    <item
        android:icon="@drawable/ic_overlay"
        android:id="@+id/menu_overlay_controls"
        android:title="@string/emulation_input_overlay"/>
    <item
        android:icon="@drawable/ic_unlock"
        android:id="@+id/menu_lock_drawer"
        android:title="@string/emulation_input_overlay"/>
    <item
        android:icon="@drawable/ic_exit"
        android:id="@+id/menu_exit"
        android:title="@string/emulation_exit"/>
</menu>
