<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_about"
    android:background="?attr/colorSurface"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_ea"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:touchscreenBlocksFocus="false">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_about"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:touchscreenBlocksFocus="false"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/early_access"/>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_ea"
        android:paddingBottom="20dp"
        android:scrollbars="vertical"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:defaultFocusHighlightEnabled="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/card_ea"
            android:background="@drawable/premium_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="32dp">
            <com.google.android.material.textview.MaterialTextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/early_access_benefits"
                android:textAlignment="center"
                android:layout_marginHorizontal="20dp"
                style="@style/TextAppearance.Material3.TitleLarge"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="20dp">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_check_circle"
                    app:tint="?attr/colorOnSurface"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_gravity="start|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cutting_edge_features"
                    android:textAlignment="viewStart"
                    android:layout_marginStart="20dp"
                    style="@style/TextAppearance.Material3.BodyLarge"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="20dp">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_check_circle"
                    app:tint="?attr/colorOnSurface"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_gravity="start|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/early_access_updates"
                    android:textAlignment="viewStart"
                    android:layout_marginStart="20dp"
                    style="@style/TextAppearance.Material3.BodyLarge"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="20dp">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_check_circle"
                    app:tint="?attr/colorOnSurface"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_gravity="start|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_manual_installation"
                    android:textAlignment="viewStart"
                    android:layout_marginStart="20dp"
                    style="@style/TextAppearance.Material3.BodyLarge"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="20dp">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_check_circle"
                    app:tint="?attr/colorOnSurface"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_gravity="start|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prioritized_support"
                    android:textAlignment="viewStart"
                    android:layout_marginStart="20dp"
                    style="@style/TextAppearance.Material3.BodyLarge"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="20dp">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_check_circle"
                    app:tint="?attr/colorOnSurface"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_gravity="start|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/helping_game_preservation"
                    android:textAlignment="viewStart"
                    android:layout_marginStart="20dp"
                    style="@style/TextAppearance.Material3.BodyLarge"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="20dp">
                <ImageView
                    android:layout_gravity="center_vertical"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_check_circle"
                    app:tint="?attr/colorOnSurface"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_gravity="start|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/our_eternal_gratitude"
                    android:textAlignment="viewStart"
                    android:layout_marginStart="20dp"
                    style="@style/TextAppearance.Material3.BodyLarge"/>
            </LinearLayout>
            <com.google.android.material.textview.MaterialTextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/are_you_interested"
                android:textAlignment="center"
                android:layout_marginHorizontal="20dp"
                style="@style/TextAppearance.Material3.TitleLarge"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/get_early_access_button"
                android:background="?attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="28dp"
                android:backgroundTint="@android:color/black"
                android:layout_marginHorizontal="20dp"
                style="?attr/materialCardViewFilledStyle">
                <com.google.android.material.textview.MaterialTextView
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_early_access"
                    android:textAlignment="center"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="8dp"
                    style="@style/TextAppearance.Material3.TitleLarge"/>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
